--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;" data-bs-theme="light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Henry Goss</a>
+        <a class="navbar-brand" href="#"><p class="fw-bolder">Henry Goss</p></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Work/Internship Experience</a>
-            </li>>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
