--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;" data-bs-theme="light">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary" data-bs-theme="light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><strong>Henry Goss</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
