--- a/work.html
+++ b/work.html
@@ -22,39 +22,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="education.html">Education</a>
           <a class="nav-link" href="skills.html">Skills</a>
-          <a class="nav-link" href="work.html">Work/Internship Experience</a>
+          <a class="nav-link active" aria-current="page" href="work.html">Work/Internship Experience</a>
           <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
         </div>
       </div>
     </div>
   </nav>
-  <h1>
-    <p class="h1 text-center">Welcome to my Personal Profile</p>
-    <h1>
-
-      <div class="card mx-auto" style="width: 45rem;">
-        <img src="FinalAssets/henry.jpg" class="card-img-top" alt="Henry Goss Profile Picture">
-        <div class="card-body">
-          <p class="card-tex">Overview:
-          <p class="fw-normal fs-3">My name is Henry Goss and I am a student at St. Lawrence University where I am
-            hoping to prepare for a career in medicine.
-          <ul class="list-group fw-normal fs-4">
-            <li class="list-group-item"><strong>Education:</strong> get a background for my academic proficiencies and
-              history.</li>
-            <li class="list-group-item"><strong>Skills:</strong> learn about both my hard and soft skills. Really learn
-              about me as a person.</li>
-            <li class="list-group-item"><strong>Work/Internship Experience: </strong>Learn about what initiative I have
-              taken to further my professional interests. </li>
-          </ul>
-          </p>
-          </p>
-          </p>
-        </div>
-      </div>
-      <div class="modal" id="composeModal" tabindex="-1">
+  <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -76,6 +53,5 @@
                 </form>
               </form>
 
-</body>
-
-</html>
+  </body>
+  </html>
