--- a/education.html
+++ b/education.html
@@ -2,55 +2,169 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Henry B. Goss</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Henry B. Goss</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-primary sticky-top px-0" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><strong>Henry B. Goss</strong></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="index.html">Home</a>
-          <a class="nav-link active" aria-current="page" href="education.html">Education</a>
-          <a class="nav-link" href="skills.html">Skills</a>
-          <a class="nav-link" href="work.html">Work/Internship Experience</a>
-          <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-<div class="modal" id="composeModal" tabindex="-1">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Contact Me!</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <nav class="navbar navbar-expand-lg bg-primary sticky-top px-0" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><strong>Henry B. Goss</strong></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="education.html">Education</a>
+                    <a class="nav-link" href="skills.html">Skills</a>
+                    <a class="nav-link" href="work.html">Work/Internship Experience</a>
+                    <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
+                </div>
             </div>
-            <div class="modal-body">
-              <p>
-              <form>
-                <form action="https://api.web3forms.com/submit" method="POST">
-                  <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label fs-3">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text fs-5">We'll never share your email with anyone else.</div>
-                  </div>
-                  <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </div>
-                </form>
-              </form>
-  </body>
-  </html>
+        </div>
+    </nav>
+    <h1 class="h1 text-center">
+        My Education
+    </h1>
+
+    <p class="h3 text-center">Middle School:</p>
+    <div class="card col-md-6 mx-auto">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/lowville.png" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
+                    <figcaption class="figure-caption ms-2">
+                        <p><a class="link-opacity-75-hover" href="https://www.lowvilleacademy.org/">Source</a></p>
+                    </figcaption>
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Lowville Academy Middle School</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Fall 2018- Spring 2021</h6>
+                <p class="card-text">
+                <ul class="list-group">
+                    <li class="list-group-item"><strong>Grade Six:</strong> varsity football manager, basketball,
+                        lacrosse,
+                        science award, high honor roll, technology club</li>
+                    <li class="list-group-item"><strong>Grade Seven:</strong> modified football, modified basketball.
+                        varsity football manager, technology club, high honor roll, math award</li>
+                    <li class="list-group-item"><strong>Grade Eight:</strong> (COVID hybrid schedule), accelerated in
+                        math and science, modified lacrosse, high honor roll, science award, English award</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <p class="h3 text-center mt-3">High School:</p>
+    <div class="card col-md-6 mx-auto">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/lowville.png" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
+                    <figcaption class="figure-caption ms-2">
+                        <p><a class="link-opacity-75-hover" href="https://www.lowvilleacademy.org/">Source</a></p>
+                    </figcaption>
+                </figure>
+
+            </div>
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Lowville Academy High School</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Fall 2021- Spring 2025</h6>
+                <p class="card-text">
+                <ul class="list-group">
+                    <li class="list-group-item"><strong>Grade Nine:</strong> JV football, varsity alpine ski team, JV
+                        lacrosse, band, marching band, high honor roll</li>
+                    <li class="list-group-item"><strong>Grade Ten:</strong> JV football, varsity alpine ski team, JV
+                        lacrosse, Whiz Quiz, band,
+                        marching band, high honor roll</li>
+                    <li class="list-group-item"><strong>Grade Eleven:</strong> varsity football, varsity ski team
+                        (captain), varsity lacrosse, Whiz Quiz (treasurer), National Honor Society (treasurer), high
+                        honor roll</li>
+                    <li class="list-group-item"><strong>Grade Eleven:</strong> varsity football, varsity ski team
+                        (captain), varsity lacrosse, Whiz Quiz (treasurer), National Honor Society (treasurer), AP
+                        scholar, high honor roll</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <p class="h4 text-center mt-3">Courses: </p>
+    <ul class="list-group text-center col-md-6 mx-auto">
+        <li class="list-group-item"><strong>English:</strong> English 9, English 10, Advanced English 11, Dual
+            Enrollment English 101, Dual Enrollment English 102, English 12 Honors</li>
+        <li class="list-group-item"><strong>Social Studies:</strong> Global Studies 9, Global Studies 10, AP United
+            States History, Participation in Government, Economics</li>
+        <li class="list-group-item"><strong>Science:</strong> Biology (eighth grade), Earth Science, Chemistry, Physics,
+            Anatomy and Physiology, AP Chemistry</li>
+        <li class="list-group-item"><strong>Math:</strong> Algebra I (eighth grade), Geometry, Algebra II, Pre-Calculus,
+            AP Calculus AB</li>
+    </ul>
+    <p class="h4 text-center mt-3">College:</p>
+    <div class="card col-md-6 mx-auto">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/SLUshield.webp" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
+                    <figcaption class="figure-caption ms-2">
+                        <p><a class="link-opacity-75-hover"
+                                href="https://saintsathletics.com/sports/mens-crew">Source</a></p>
+                    </figcaption>
+                </figure>
+
+            </div>
+            <div class="card-body col-md-3">
+                <h5 class="card-title">St. Lawrence University</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Fall 2025- Present</h6>
+                <p class="card-text">
+                <ul class="list-group">
+                    <li class="list-group-item"><strong>First Year:</strong> men's rowing team, pre-health mentorship
+                        program, pre-dental society (treasurer)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <p class="h4 text-center mt-3">Courses: </p>
+    <ul class="list-group text-center col-md-6 mx-auto mb-3">
+        <li class="list-group-item">Biology 101</li>
+        <li class="list-group-item">Chemistry</li>
+        <li class="list-group-item">Web Design</li>
+        <li class="list-group-item">First Year Program: Medicines and Maladies</li>
+    </ul>
+    <div class="modal" id="composeModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Contact Me!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                    <form action="https://api.web3forms.com/submit" id=form method="POST">
+                        <input type="hidden" name="access_key" value="8412b2d1-e956-4604-a803-81f85f8de135">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label fs-3">Email address</label>
+                            <input type="email" class="form-control" name="email" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text fs-5">We'll never share your email with anyone else.
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
+
+</html>
