--- a/index.html
+++ b/index.html
@@ -31,51 +31,53 @@
       </div>
     </div>
   </nav>
-  <h1>
-    <p class="h1 text-center">Welcome to my Personal Profile</p>
-    <h1>
+  <div class="container">
+    <h1 class="h1 text-center">
+      Welcome to my Personal Profile
+    </h1>
 
-      <div class="card mx-auto" style="width: 45rem;">
-        <img src="FinalAssets/henry.jpg" class="card-img-top" alt="Henry Goss Profile Picture">
-        <div class="card-body">
-          <p class="card-tex">Overview:
-          <p class="fw-normal fs-3">My name is Henry Goss and I am a student at St. Lawrence University where I am
-            hoping to prepare for a career in medicine.
-          <ul class="list-group fw-normal fs-4">
-            <li class="list-group-item"><strong>Education:</strong> get a background for my academic proficiencies and
-              history.</li>
-            <li class="list-group-item"><strong>Skills:</strong> learn about both my hard and soft skills. Really learn
-              about me as a person.</li>
-            <li class="list-group-item"><strong>Work/Internship Experience: </strong>Learn about what initiative I have
-              taken to further my professional interests. </li>
-          </ul>
-          </p>
-          </p>
-          </p>
+    <div class="card mx-auto col-md-6 mb-3">
+      <img src="FinalAssets/henry.jpg" class="card-img-top img-fluid" alt="Henry Goss Profile Picture">
+      <div class="card-body">
+        <p class="card-text fs-3"><strong>Overview:</strong></p>
+        <p class="fw-normal fs-3">My name is Henry Goss and I am a student at St. Lawrence University where I am
+          hoping to prepare for a career in medicine.</p>
+        <ul class="list-group fw-normal fs-4">
+          <li class="list-group-item"><strong>Education:</strong> get a background for my academic proficiencies and
+            history.</li>
+          <li class="list-group-item"><strong>Skills:</strong> learn about both my hard and soft skills. Really learn
+            about me as a person.</li>
+          <li class="list-group-item"><strong>Work/Internship Experience: </strong>Learn about what initiative I have
+            taken to further my professional interests. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="modal" id="composeModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Contact Me!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>
+          <form action="https://api.web3forms.com/submit" id=form method="POST">
+            <input type="hidden" name="access_key" value="8412b2d1-e956-4604-a803-81f85f8de135">
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label fs-3">Email address</label>
+              <input type="email" class="form-control" name="email" id="exampleInputEmail1"
+                aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text fs-5">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
         </div>
       </div>
-      <div class="modal" id="composeModal" tabindex="-1">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Contact Me!</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <p>
-              <form>
-                <form action="https://api.web3forms.com/submit" method="POST">
-                  <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label fs-3">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text fs-5">We'll never share your email with anyone else.</div>
-                  </div>
-                  <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </div>
-                </form>
-              </form>
-
+    </div>
+  </div>
 </body>
 
 </html>
