--- a/skills.html
+++ b/skills.html
@@ -31,6 +31,14 @@
       </div>
     </div>
   </nav>
+<p class="h1 text-center">My Skills</p>
+
+    <p class="h3 text-center">Hard Skills</p>
+    <ul>
+  <li>First item</li>
+  <li>Second item</li>
+  <li>Third item</li>
+</ul>
 
 <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
