--- a/skills.html
+++ b/skills.html
@@ -2,45 +2,56 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Henry B. Goss</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Henry B. Goss</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-primary sticky-top px-0" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><strong>Henry B. Goss</strong></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="education.html">Education</a>
-          <a class="nav-link active" aria-current="page" href="skills.html">Skills</a>
-          <a class="nav-link" href="work.html">Work/Internship Experience</a>
-          <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
+    <nav class="navbar navbar-expand-lg bg-primary sticky-top px-0" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><strong>Henry B. Goss</strong></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" href="education.html">Education</a>
+                    <a class="nav-link active" aria-current="page" href="skills.html">Skills</a>
+                    <a class="nav-link" href="work.html">Work/Internship Experience</a>
+                    <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
-<p class="h1 text-center">My Skills</p>
+    </nav>
+    <p class="h1 text-center my-5">My Skills:</p>
 
-    <p class="h3 text-center">Hard Skills</p>
-    <ul>
-  <li>First item</li>
-  <li>Second item</li>
-  <li>Third item</li>
-</ul>
-
-<div class="modal" id="composeModal" tabindex="-1">
+    <p class="h3 text-center bg-primary col-md-3 mx-auto my-4 text-light rounded">Hard Skills:</p>
+    <ul class="list-group text-center col-md-6 mx-auto mb-3">
+        <li class="list-group-item">HIPPA Trained</li>
+        <li class="list-group-item">Spanish</li>
+        <li class="list-group-item">Beginner in HTML and CSS Web Design</li>
+        <li class="list-group-item">NYS Licensed Driver</li>
+        <li class="list-group-item">NYS Licensed Hunter</li>
+        <li class="list-group-item">NYS Licensed Snowmobiler</li>
+        <li class="list-group-item">Experience using carpentry tools</li>
+    </ul>
+    <p class="h3 text-center bg-primary col-md-3 mx-auto mt-5 mb-4 text-light rounded">Soft Skills:</p>
+    <ul class="list-group text-center col-md-6 mx-auto mb-3">
+        <li class="list-group-item">Teamwork and collaboration</li>
+        <li class="list-group-item">Work ethic</li>
+        <li class="list-group-item">Leadership</li>
+        <li class="list-group-item">Resilience</li>
+        <li class="list-group-item">Compassion</li>
+    </ul>
+    <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -66,7 +77,15 @@
             </div>
         </div>
     </div>
+    <p class="h3 text-center bg-primary col-md-3 mx-auto mt-5 mb-4 text-light rounded">What these skills mean in
+        culmination:</p>
+    <div class="row">
+        <p class="text-center col-md-6 mx-auto"> I feel that I have a strong skill base that covers a large number of
+            topics I am interested in. In the future I hope to acquire more skills to make me compatible in many
+            situations. My soft skills have allowed me to acquire a large variety of hard skills. I hope that I am able
+            to help out in an way possible. Finally, I feel that my soft skills allow me to maximize my strengths as
+            well as minimize my weaknesses in addition to working on them everyday. </p>
+    </div>
+</body>
 
-
-  </body>
-  </html>
+</html>
