--- a/work.html
+++ b/work.html
@@ -2,36 +2,80 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Henry B. Goss</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Henry B. Goss</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-primary sticky-top px-0" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><strong>Henry B. Goss</strong></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="education.html">Education</a>
-          <a class="nav-link" href="skills.html">Skills</a>
-          <a class="nav-link active" aria-current="page" href="work.html">Work/Internship Experience</a>
-          <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
+    <nav class="navbar navbar-expand-lg bg-primary sticky-top px-0" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><strong>Henry B. Goss</strong></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" href="education.html">Education</a>
+                    <a class="nav-link" href="skills.html">Skills</a>
+                    <a class="nav-link active" aria-current="page" href="work.html">Work/Internship Experience</a>
+                    <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
+                </div>
+            </div>
         </div>
-      </div>
+    </nav>
+
+    <p class="h3 text-center mt-5">Work Experience:</p>
+    <div class="card col-md-6 mx-auto">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/wood.jpg" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
+
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Henry's Hardwoods</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Spring 2020-Present</h6>
+                <p class="card-text">
+                    I started this firewood business during COVID beause I saw a huge market for firewood in my area. I
+                    started out by splitting all the the wood by hand and now I have grown to log splitter. This has
+                    been my income source in the summers that allowed me to train for sports, volunteer or shadow.
+            </div>
+        </div>
     </div>
-  </nav>
- <div class="modal" id="composeModal" tabindex="-1">
+    <p class="h3 text-center mt-5">Internship Experience:</p>
+    <div class="card col-md-6 mx-auto">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/LCHS.png" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
+                    <figcaption class="figure-caption ms-2">
+                        <p><a class="link-opacity-75-hover" href="https://www.lcgh.net/">Source</a></p>
+                    </figcaption>
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Lewis County Health System</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Summer 2024, 2025</h6>
+                <p class="card-text">
+                    I started this firewood business during COVID beause I saw a huge market for firewood in my area. I
+                    started out by splitting all the the wood by hand and now I have grown to log splitter. This has been my income source in the summers that allowed me to train for sports, volunteer or shadow. 
+            </div>
+        </div>
+
+    <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -46,7 +90,8 @@
                             <label for="exampleInputEmail1" class="form-label fs-3">Email address</label>
                             <input type="email" class="form-control" name="email" id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text fs-5">We'll never share your email with anyone else.
+                            <div id="emailHelp" class="form-text fs-5">We'll never share your email with anyone
+                                else.
                             </div>
                         </div>
                         <div class="text-center">
@@ -58,5 +103,6 @@
         </div>
     </div>
 
-  </body>
-  </html>
+</body>
+
+</html>
