--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <a class="nav-link" href="education.html">Education</a>
           <a class="nav-link" href="skills.html">Skills</a>
           <a class="nav-link" href="work.html">Work/Internship Experience</a>
+          <a class="nav-link" href="projects.html">Projects</a>
           <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
         </div>
       </div>
