--- a/work.html
+++ b/work.html
@@ -26,6 +26,7 @@
                     <a class="nav-link" href="education.html">Education</a>
                     <a class="nav-link" href="skills.html">Skills</a>
                     <a class="nav-link active" aria-current="page" href="work.html">Work/Internship Experience</a>
+                    <a class="nav-link" href="projects.html">Projects</a>
                     <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
                 </div>
             </div>
@@ -58,7 +59,7 @@
         <div class="row">
             <div class="col-md-3">
                 <figure class="figure">
-                    <img src="FinalAssets/LCHS.png" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
+                    <img src="FinalAssets/LCHS.png" class="img-thumbnail ms-2 mt-2" alt="LCHS Logo">
                     <figcaption class="figure-caption ms-2">
                         <p><a class="link-opacity-75-hover" href="https://www.lcgh.net/">Source</a></p>
                     </figcaption>
@@ -70,10 +71,80 @@
                 <h5 class="card-title">Lewis County Health System</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Summer 2024, 2025</h6>
                 <p class="card-text">
-                    I started this firewood business during COVID beause I saw a huge market for firewood in my area. I
-                    started out by splitting all the the wood by hand and now I have grown to log splitter. This has been my income source in the summers that allowed me to train for sports, volunteer or shadow. 
+                    I began shadowing at Lewis County Health System for the summer where I observed most departments. I
+                    observed in the ER, general surgery, family medicine, internal medicine and orthopedics. I was able
+                    to go to the OR and observe operations by general surgery and orthopedics. Aditionally, I was able
+                    to observe the CEO and CFO to strengthen my understanding of healthcare administration. Over summer
+                    2025, I exclusively shadowed orthopedics in the OR but I did get some experience in the clinic.
             </div>
         </div>
+
+    </div>
+
+    <div class="card col-md-6 mx-auto my-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/Attisha.webp" class="img-thumbnail ms-2 mt-2" alt="Oral Surgery of NNY">
+                    <figcaption class="figure-caption ms-2">
+                        <p><a class="link-opacity-75-hover" href="https://www.oralsurgerynny.com/">Source</a></p>
+                    </figcaption>
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Oral Surgery of NNY- Dr. Attisha</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Summer 2025</h6>
+                <p class="card-text">
+                    I was able to shadow Dr. Attisha at both his office and Samaritan Mdical Center in the hospital
+                    center. In my time shadowing, I was able to observe many different oral surgeries including wisdom
+                    teeth removal, and dental implants. I was also able to observe patient consultations in the
+                    office setting. This experience was valuble because I was able to see managing a private practice as
+                    well as the opertions in a hospital setting.
+            </div>
+        </div>
+    </div>
+    <div class="card col-md-6 mx-auto my-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/upstate.jpg" class="img-thumbnail ms-2 mt-2" alt="Upstate Oral Surgery">
+                    <figcaption class="figure-caption ms-2">
+                        <p><a class="link-opacity-75-hover" href="https://upstateoralsurgery.com/">Source</a></p>
+                    </figcaption>
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Upstate Oral Surgery- Dr. Curtis</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Summer 2024, Spring 2025</h6>
+                <p class="card-text">
+                    I was able to shadow Dr. Curtis in his private practice office. This was my first experience in
+                    observng procedures like wisdom tooth removal and dental implants. It was also very interesting to
+                    experience in offfice sedation. This experience was very valuable because it allowed me to also
+                    observe Dr. Curtis expanding his practice into a new office space he was building.
+            </div>
+        </div>
+    </div>
+    <div class="card col-md-6 mx-auto my-3">
+        <div class="row">
+            <div class="col-md-3">
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Dr. Lynn Stacy, DDS</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Summer 2023, 2024</h6>
+                <p class="card-text">
+                    I was able to shadow Dr. Stacy in her private practice dental office. During my time there I was
+                    able to observe many different dental procedures including fillings, and routine exams. This
+                    experience was very valuable because it allowed me to see how a private practice
+                    is run as well as observe many different patient interactions. Furthermore, this was my first
+                    experience in the dental field so i was able to get a basic understanding of how dentistry works.
+            </div>
+        </div>
+    </div>
 
     <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
