--- a/projects.html
+++ b/projects.html
@@ -24,34 +24,14 @@
                 <div class="navbar-nav">
                     <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link" href="education.html">Education</a>
-                    <a class="nav-link active" aria-current="page" href="skills.html">Skills</a>
+                    <a class="nav-link" href="skills.html">Skills</a>
                     <a class="nav-link" href="work.html">Work/Internship Experience</a>
-                    <a class="nav-link" href="projects.html">Projects</a>
+                    <a class="nav-link active" aria-current="page" href="projects.html">Projects</a>
                     <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#composeModal">Contact</a>
                 </div>
             </div>
         </div>
     </nav>
-    <p class="h1 text-center my-5">My Skills:</p>
-
-    <p class="h3 text-center bg-primary col-md-3 mx-auto my-4 text-light rounded">Hard Skills:</p>
-    <ul class="list-group text-center col-md-6 mx-auto mb-3">
-        <li class="list-group-item">HIPPA Trained</li>
-        <li class="list-group-item">Spanish</li>
-        <li class="list-group-item">Beginner in HTML and CSS Web Design</li>
-        <li class="list-group-item">NYS Licensed Driver</li>
-        <li class="list-group-item">NYS Licensed Hunter</li>
-        <li class="list-group-item">NYS Licensed Snowmobiler</li>
-        <li class="list-group-item">Experience using carpentry tools</li>
-    </ul>
-    <p class="h3 text-center bg-primary col-md-3 mx-auto mt-5 mb-4 text-light rounded">Soft Skills:</p>
-    <ul class="list-group text-center col-md-6 mx-auto mb-3">
-        <li class="list-group-item">Teamwork and collaboration</li>
-        <li class="list-group-item">Work ethic</li>
-        <li class="list-group-item">Leadership</li>
-        <li class="list-group-item">Resilience</li>
-        <li class="list-group-item">Compassion</li>
-    </ul>
     <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -67,7 +47,8 @@
                             <label for="exampleInputEmail1" class="form-label fs-3">Email address</label>
                             <input type="email" class="form-control" name="email" id="exampleInputEmail1"
                                 aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text fs-5">We'll never share your email with anyone else.
+                            <div id="emailHelp" class="form-text fs-5">We'll never share your email with anyone
+                                else.
                             </div>
                         </div>
                         <div class="text-center">
@@ -78,15 +59,5 @@
             </div>
         </div>
     </div>
-    <p class="h3 text-center bg-primary col-md-3 mx-auto mt-5 mb-4 text-light rounded">What these skills mean in
-        culmination:</p>
-    <div class="row">
-        <p class="text-center col-md-6 mx-auto"> I feel that I have a strong skill base that covers a large number of
-            topics I am interested in. In the future I hope to acquire more skills to make me compatible in many
-            situations. My soft skills have allowed me to acquire a large variety of hard skills. I hope that I am able
-            to help out in an way possible. Finally, I feel that my soft skills allow me to maximize my strengths as
-            well as minimize my weaknesses in addition to working on them everyday. </p>
-    </div>
-</body>
-
-</html>
+    </body>
+    </html>
