--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,110 @@
             </div>
         </div>
     </nav>
+    <p class="h1 text-center bg-primary col-md-3 mx-auto my-4 text-light rounded my-5">Projects:</p>
+    <p class="h3 text-center mt-5">Academic Projects:</p>
+    <div class="card col-md-6 mx-auto">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/henry.jpg" class="img-thumbnail ms-2 mt-2" alt="Henry's Formal">
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Personal Website</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Fall Semester 2025</h6>
+                <p class="card-text">
+                    I learned the basics of HTML and CSS in my Web Design class. This website was my final project where
+                    I created a personal portfolio. One of the main purposes was to make this a resource for my
+                    professional career.
+            </div>
+        </div>
+    </div>
+    <div class="card col-md-6 mx-auto mt-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/seal.jpg" class="img-thumbnail ms-2 mt-2" alt="Henry's Seal Picture">
+                    <figcaption class="figure-caption ms-2">
+                        <p><a class="link-opacity-75-hover"
+                                href="https://www.romesentinel.com/boonville-herald/lowville-academy-seniors-earn-seal-of-biliteracy/article_f6a30ca9-f55d-4a39-a321-83c179f6426b.html">Source</a>
+                        </p>
+                    </figcaption>
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+
+                <h5 class="card-title">Seal of Biliteracy</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Spring 2025</h6>
+                <p class="card-text">
+                    During this project I was taked with presenting a slideshow in Spanish. I had to present to Spanish
+                    teachers from other schools, I presented about skiing in the Spanish speaking world. Through this
+                    project, I demonstrated a high level of proficiency in English and Spanish.
+            </div>
+        </div>
+    </div>
+    <p class="h3 text-center mt-5">Woodworking Projects:</p>
+    <div class="card col-md-6 mx-auto mt-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/bench.jpg" class="img-thumbnail ms-2 mt-2" alt="Henry's bench and table">
+
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Bench and Table</h5>
+                <p class="card-text">
+                    This was one of my first projects, I built an outdoor banch and table for my family to use at our
+                    cabin in the woods. I built this from pressure treated wood you can buy at any hardware store.
+                    Furthermore, I built this with just a drill and a circular saw.
+            </div>
+        </div>
+    </div>
+    <div class="card col-md-6 mx-auto mt-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/birdfeeder.jpg" class="img-thumbnail ms-2 mt-2" alt="birdfeeder">
+
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Bird Feeder</h5>
+                <p class="card-text">
+                    I built this birtfeeder for my auunt for christmas one year. I used cedar wood to build this so it
+                    would last outside in all weather conditions. This is built so that you can spread an icing type
+                    material for the birds to eat.
+            </div>
+        </div>
+    </div>
+    <div class="card col-md-6 mx-auto mt-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/birdhouse.jpg" class="img-thumbnail ms-2 mt-2" alt="bird house">
+
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Bird House</h5>
+                <p class="card-text">
+                    I built this bird house for my aunt again for Christmas. This house is made out of cedar so that it
+                    does well in the weather. I put a copper roof on to enhance styling. Also, I made one side flip open
+                    so you can easily clean the inside.
+            </div>
+        </div>
+    </div>
     <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -59,5 +163,6 @@
             </div>
         </div>
     </div>
-    </body>
-    </html>
+</body>
+
+</html>
