--- a/education.html
+++ b/education.html
@@ -35,36 +35,39 @@
     <h1 class="h1 text-center">
         My Education
     </h1>
-
-    <p class="h3 text-center">Middle School:</p>
+    <p class="h4 text-center mt-3">College:</p>
     <div class="card col-md-6 mx-auto">
         <div class="row">
             <div class="col-md-3">
                 <figure class="figure">
-                    <img src="FinalAssets/lowville.png" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
+                    <img src="FinalAssets/SLUshield.webp" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
                     <figcaption class="figure-caption ms-2">
-                        <p><a class="link-opacity-75-hover" href="https://www.lowvilleacademy.org/">Source</a></p>
+                        <p><a class="link-opacity-75-hover"
+                                href="https://saintsathletics.com/sports/mens-crew">Source</a></p>
                     </figcaption>
                 </figure>
 
             </div>
-
             <div class="card-body col-md-3">
-                <h5 class="card-title">Lowville Academy Middle School</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Fall 2018- Spring 2021</h6>
+                <h5 class="card-title">St. Lawrence University</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Fall 2025- Present</h6>
                 <p class="card-text">
                 <ul class="list-group">
-                    <li class="list-group-item"><strong>Grade Six:</strong> varsity football manager, basketball,
-                        lacrosse,
-                        science award, high honor roll, technology club</li>
-                    <li class="list-group-item"><strong>Grade Seven:</strong> modified football, modified basketball.
-                        varsity football manager, technology club, high honor roll, math award</li>
-                    <li class="list-group-item"><strong>Grade Eight:</strong> (COVID hybrid schedule), accelerated in
-                        math and science, modified lacrosse, high honor roll, science award, English award</li>
+                    <li class="list-group-item"><strong>First Year:</strong> men's rowing team, pre-health mentorship
+                        program, pre-dental society (treasurer)</li>
                 </ul>
             </div>
         </div>
     </div>
+    <p class="h4 text-center mt-3">Courses: </p>
+    <ul class="list-group text-center col-md-6 mx-auto mb-3">
+        <li class="list-group-item">Biology 101</li>
+        <li class="list-group-item">Chemistry</li>
+        <li class="list-group-item">Web Design</li>
+        <li class="list-group-item">First Year Program: Medicines and Maladies</li>
+    </ul>
+
+    
     <p class="h3 text-center mt-3">High School:</p>
     <div class="card col-md-6 mx-auto">
         <div class="row">
@@ -108,37 +111,35 @@
         <li class="list-group-item"><strong>Math:</strong> Algebra I (eighth grade), Geometry, Algebra II, Pre-Calculus,
             AP Calculus AB</li>
     </ul>
-    <p class="h4 text-center mt-3">College:</p>
-    <div class="card col-md-6 mx-auto">
+    <p class="h3 text-center mt-3">Middle School:</p>
+    <div class="card col-md-6 mx-auto mb-3">
         <div class="row">
             <div class="col-md-3">
                 <figure class="figure">
-                    <img src="FinalAssets/SLUshield.webp" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
+                    <img src="FinalAssets/lowville.png" class="img-thumbnail ms-2 mt-2" alt="Lowville Academy Logo">
                     <figcaption class="figure-caption ms-2">
-                        <p><a class="link-opacity-75-hover"
-                                href="https://saintsathletics.com/sports/mens-crew">Source</a></p>
+                        <p><a class="link-opacity-75-hover" href="https://www.lowvilleacademy.org/">Source</a></p>
                     </figcaption>
                 </figure>
 
             </div>
+
             <div class="card-body col-md-3">
-                <h5 class="card-title">St. Lawrence University</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Fall 2025- Present</h6>
+                <h5 class="card-title">Lowville Academy Middle School</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Fall 2018- Spring 2021</h6>
                 <p class="card-text">
                 <ul class="list-group">
-                    <li class="list-group-item"><strong>First Year:</strong> men's rowing team, pre-health mentorship
-                        program, pre-dental society (treasurer)</li>
+                    <li class="list-group-item"><strong>Grade Six:</strong> varsity football manager, basketball,
+                        lacrosse,
+                        science award, high honor roll, technology club</li>
+                    <li class="list-group-item"><strong>Grade Seven:</strong> modified football, modified basketball.
+                        varsity football manager, technology club, high honor roll, math award</li>
+                    <li class="list-group-item"><strong>Grade Eight:</strong> (COVID hybrid schedule), accelerated in
+                        math and science, modified lacrosse, high honor roll, science award, English award</li>
                 </ul>
             </div>
         </div>
     </div>
-    <p class="h4 text-center mt-3">Courses: </p>
-    <ul class="list-group text-center col-md-6 mx-auto mb-3">
-        <li class="list-group-item">Biology 101</li>
-        <li class="list-group-item">Chemistry</li>
-        <li class="list-group-item">Web Design</li>
-        <li class="list-group-item">First Year Program: Medicines and Maladies</li>
-    </ul>
     <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
