--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,7 @@
                 <h5 class="card-title">Bird Feeder</h5>
                 <p class="card-text">
                     I built this birtfeeder for my auunt for christmas one year. I used cedar wood to build this so it
-                    would last outside in all weather conditions. This is built so that you can spread an icing type
+                    would last` outside in all weather conditions. This is built so that you can spread an icing type
                     material for the birds to eat.
             </div>
         </div>
@@ -136,6 +136,69 @@
             </div>
         </div>
     </div>
+    <div class="card col-md-6 mx-auto mt-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/bookshelf.jpg" class="img-thumbnail ms-2 mt-2" alt="bookshelf">
+
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Bookshelf</h5>
+                <p class="card-text">
+                    I built this bookshelf to store my growing collection of books. I built this shelf out of strair
+                    treads because they are made out of high quality wood that has a rounded edge already. On the edges
+                    without a round edge, I used a handplane to match it. T this point in my woodworking career, I have
+                    aquired many more tools to make things much easier. The most helpful tool for this project was my
+                    track saw, it made cutting the plywood back much easier! Also, excuse the paint job, this is the
+                    only picture I have and it is unfortunately just primed.
+            </div>
+        </div>
+    </div>
+    <div class="card col-md-6 mx-auto mt-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/board.jpg" class="img-thumbnail ms-2 mt-2" alt="Board">
+
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Charcuterie Board</h5>
+                <p class="card-text">
+                    I built thus charcuterie board for my cousin as a house warming gift. These board are made out of
+                    mahogany to ensure they will last many generations. The one board with an edge is also a carrying
+                    tray, the edges are mmade out of curly maple. I made the handles boat cleats because my cousin oves
+                    sail boats and natical things.
+            </div>
+        </div>
+    </div>
+    <div class="card col-md-6 mx-auto my-3">
+        <div class="row">
+            <div class="col-md-3">
+                <figure class="figure">
+                    <img src="FinalAssets/holder.jpeg" class="img-thumbnail ms-2 mt-2" alt="Phone Holder">
+
+                </figure>
+
+            </div>
+
+            <div class="card-body col-md-3">
+                <h5 class="card-title">Mahogany Phone Holders</h5>
+                <p class="card-text">
+                    I built these nifty phone holders out of the mahogany scraps from my charcuterie board project.
+                    These holders are designed to prop up your phone at a comfortable viewing angle, perfect for video
+                    calls or watching videos hands-free. The sleek design and rich mahogany finish make them both
+                    functional and stylish additions to any desk or nightstand.
+            </div>
+        </div>
+    </div>
+
     <div class="modal" id="composeModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
