--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </nav>
   <div class="container">
-    <h1 class="h1 text-center">
+    <h1 class="h1 text-center bg-primary col-md-6 mx-auto text-light rounded my-5">
       Welcome to my Personal Profile
     </h1>
 
