--- a/skills.html
+++ b/skills.html
@@ -32,9 +32,9 @@
             </div>
         </div>
     </nav>
-    <p class="h1 text-center my-5">My Skills:</p>
+    <p class="h1 text-center bg-primary col-md-6 mx-auto text-light rounded my-5">My Skills:</p>
 
-    <p class="h3 text-center bg-primary col-md-3 mx-auto my-4 text-light rounded">Hard Skills:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">Hard Skills:</p>
     <ul class="list-group text-center col-md-6 mx-auto mb-3">
         <li class="list-group-item">HIPPA Trained</li>
         <li class="list-group-item">Spanish</li>
@@ -44,7 +44,7 @@
         <li class="list-group-item">NYS Licensed Snowmobiler</li>
         <li class="list-group-item">Experience using carpentry tools</li>
     </ul>
-    <p class="h3 text-center bg-primary col-md-3 mx-auto mt-5 mb-4 text-light rounded">Soft Skills:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">Soft Skills:</p>
     <ul class="list-group text-center col-md-6 mx-auto mb-3">
         <li class="list-group-item">Teamwork and collaboration</li>
         <li class="list-group-item">Work ethic</li>
@@ -78,7 +78,7 @@
             </div>
         </div>
     </div>
-    <p class="h3 text-center bg-primary col-md-3 mx-auto mt-5 mb-4 text-light rounded">What these skills mean in
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">What these skills mean in
         culmination:</p>
     <div class="row">
         <p class="text-center col-md-6 mx-auto"> I feel that I have a strong skill base that covers a large number of
