--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <p class="h3 text-center mt-5">Work Experience:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">Work Experience:</p>
     <div class="card col-md-6 mx-auto">
         <div class="row">
             <div class="col-md-3">
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <p class="h3 text-center mt-5">Internship Experience:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">Internship Experience:</p>
     <div class="card col-md-6 mx-auto">
         <div class="row">
             <div class="col-md-3">
