--- a/education.html
+++ b/education.html
@@ -32,10 +32,10 @@
             </div>
         </div>
     </nav>
-    <h1 class="h1 text-center">
+    <h1 class="h1 text-center bg-primary col-md-6 mx-auto text-light rounded my-5">
         My Education
     </h1>
-    <p class="h4 text-center mt-3">College:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">College:</p>
     <div class="card col-md-6 mx-auto">
         <div class="row">
             <div class="col-md-3">
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <p class="h4 text-center mt-3">Courses: </p>
+    <p class="h4 text-center mt-5 bg-info text-light rounded my-5 col-md-3 mx-auto">Courses: </p>
     <ul class="list-group text-center col-md-6 mx-auto mb-3">
         <li class="list-group-item">Biology 101</li>
         <li class="list-group-item">Chemistry</li>
@@ -68,7 +68,7 @@
     </ul>
 
     
-    <p class="h3 text-center mt-3">High School:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">High School:</p>
     <div class="card col-md-6 mx-auto">
         <div class="row">
             <div class="col-md-3">
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    <p class="h4 text-center mt-3">Courses: </p>
+    <p class="h4 text-center mt-5 bg-info text-light rounded my-5 col-md-3 mx-auto">Courses: </p>
     <ul class="list-group text-center col-md-6 mx-auto">
         <li class="list-group-item"><strong>English:</strong> English 9, English 10, Advanced English 11, Dual
             Enrollment English 101, Dual Enrollment English 102, English 12 Honors</li>
@@ -111,7 +111,7 @@
         <li class="list-group-item"><strong>Math:</strong> Algebra I (eighth grade), Geometry, Algebra II, Pre-Calculus,
             AP Calculus AB</li>
     </ul>
-    <p class="h3 text-center mt-3">Middle School:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">Middle School:</p>
     <div class="card col-md-6 mx-auto mb-3">
         <div class="row">
             <div class="col-md-3">
