--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col-md-3">
                 <figure class="figure">
-                    <img src="FinalAssets/LCHS.png" class="img-thumbnail ms-2 mt-2" alt="LCHS Logo">
+                    <img src="FinalAssets/LCHS.jpg" class="img-thumbnail ms-2 mt-2" alt="LCHS Logo">
                     <figcaption class="figure-caption ms-2">
                         <p><a class="link-opacity-75-hover" href="https://www.lcgh.net/">Source</a></p>
                     </figcaption>
