--- a/projects.html
+++ b/projects.html
@@ -32,8 +32,8 @@
             </div>
         </div>
     </nav>
-    <p class="h1 text-center bg-primary col-md-6 mx-auto text-light rounded my-5">Projects:</p>
-    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">Academic Projects:</p>
+    <p class="h1 text-center bg-primary col-md-6 mx-auto text-light rounded my-5 p-2">Projects:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Academic Projects:</p>
     <div class="card col-md-6 mx-auto">
         <div class="row">
             <div class="col-md-3">
@@ -78,7 +78,7 @@
             </div>
         </div>
     </div>
-    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto">Woodworking Projects:</p>
+    <p class="h3 text-center mt-5 bg-secondary text-light rounded my-5 col-md-3 mx-auto p-2">Woodworking Projects:</p>
     <div class="card col-md-6 mx-auto mt-3">
         <div class="row">
             <div class="col-md-3">
