--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
   </nav>
   <div class="container">
-    <h1 class="h1 text-center bg-primary col-md-6 mx-auto text-light rounded my-5">
-      Welcome to my Personal Profile
+    <h1 class="h1 text-center bg-primary col-md-6 mx-auto text-light rounded my-5 p-2">
+      Welcome To My Personal Profile
     </h1>
 
     <div class="card mx-auto col-md-6 mb-3">
